# crystallized-time

./: .gitignore  AGENTS.md  Cargo.toml  README.md  code_review.md  config.toml  crystallized_time.md  example.toe  harmonics_and_eigenmodes.md  implementation_stages.md  specifications.md
examples/: classical_spin_chain_time_crystal.html  quantum_system.py  rust_implementation.md
gate generator/: Cargo.toml  README.md  stage_2-5_spec.md  stage_3_plus_reference.md  time-crystal-gate-generator.md
gate generator/specifications/: layered_drives_spec.md
gate generator/src/: chain.rs  clock.rs  config.rs  events.rs  main.rs  midi.rs  scheduler.rs  walls.rs
specifications/: OSC_implementation_spec.md  domain_walls_spec.md  generative_visual_layer.md  localized_perturbations_spec.md  midi_routing.md
src/: chain.rs  chain_id.rs  cli.rs  clock.rs  config.rs  events.rs  input.rs  lib.rs  main.rs  midi.rs  modulation.rs  osc.rs  osc_io.rs  perturbation.rs  quantizer.rs  runtime.rs  scheduler.rs  wall_midi.rs  walls.rs
src/config/: clock.rs  config_file.rs  coupling.rs  events.rs  input.rs  midi.rs  mod.rs  modulation.rs  osc.rs  physics.rs  quantize.rs  tempo.rs  walls.rs
src/runtime/: coupling.rs  mod.rs  pipeline.rs
src/tui/: app.rs  mod.rs
