[package]
name = "crystallized_time"
version = "0.1.0"
edition = "2021"
description = "Time-crystal-driven MIDI gate generator (Stage 1-2)"
license = "MIT OR Apache-2.0"

[dependencies]
midir = "0.10"
rand = "0.8"
rand_distr = "0.4"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
arc-swap = "1.7"
rosc = "0.10"
serde = { version = "1", features = ["derive"] }
toml = "0.8"


[profile.release]
opt-level = 3
lto = "thin"
