[package]
name = "crystallized_time"
version = "0.1.0"
edition = "2021"
description = "Time-crystal-driven MIDI generator with OSC parameter control and MIDI input perturbation"
license = "MIT"

[dependencies]
midir = "0.10"
rand = "0.8"
rand_distr = "0.4"
clap = { version = "4.5", features = ["derive"] }
ctrlc = { version = "3.4", features = ["termination"] }
arc-swap = "1.7"
rosc = "0.10"
serde = { version = "1", features = ["derive"] }
toml = "0.8"


[profile.release]
opt-level = 3
lto = "thin"

[[bin]]
name = "crystallized_time"
path = "src/main.rs"

[[bin]]
name = "sweep"
path = "src/bin/sweep.rs"
